--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,5 +6,9 @@
   "settlegeocategories-i18n-welcome": "Welcome to the localization file of the SettleGeoCategories extension.",
   "settlegeocategories-scope-0": "country",
   "settlegeocategories-scope-1": "state",
-  "settlegeocategories-scope-2": "city"
+  "settlegeocategories-scope-2": "city",
+  "settlegeocategories-no-results": "There are no results found.",
+  "settlegeocategories-main-categories-intro": "Please select a main category below. Only categories that contain at least one article are displayed.",
+  "settlegeocategories-sub-categories-intro": "Please select a sub-category below. Only categories that contain at least one article are displayed.",
+  "settlegeocategories-articles-categories-intro": "Below you can see list of articles within selected category."
 }
